// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-fake-menu Default 1`] = `
<div
  className="fake-menu"
  onClick={[Function]}
>
  <ul
    className="fake-menu__items"
  >
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots ebay-fake-menu With Checkbox set via boolean 1`] = `
<div
  className="fake-menu"
>
  <ul
    className="fake-menu__items"
  >
    <li>
      <a
        aria-current="page"
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Current page
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          page 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          page 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots ebay-fake-menu With Checkbox set via number 1`] = `
<div
  className="fake-menu"
>
  <ul
    className="fake-menu__items"
  >
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          page 1
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Current page
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          page 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots ebay-fake-menu With Disabled Item 1`] = `
<div
  className="fake-menu"
>
  <ul
    className="fake-menu__items"
  >
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        onClick={[Function]}
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots ebay-fake-menu With Separator 1`] = `
<div
  className="fake-menu"
>
  <ul
    className="fake-menu__items"
  >
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <hr
        checked={false}
        className="fake-menu__separator"
        onClick={[Function]}
        role="separator"
      />
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 4
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        className="fake-menu__item"
        href="#"
        onClick={[Function]}
      >
        <span>
          Item 5
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;
